syntax = "proto3";

package ga4gh;

option java_package = "org.opencb.opencga.server.grpc";
option java_outer_classname = "ServiceTypesModel";

message BasicRequest {
    map<string, string> query = 3;
    map<string, string> options = 4;
}

message Response {
    string id = 1;
    string warning = 2;
    string error = 3;
}

message LongResponse {
    Response response = 1;
    int64 value = 2;
}

message StringResponse {
    Response response = 1;
    string value = 2;
}

message StringArrayResponse {
    Response response = 1;
    repeated string values = 2;
}

message GroupResponse {
    Response response = 1;
    map<string, string> values = 2;
}

message MapResponse {
    Response response = 1;
    map<string, string> values = 2;
}
